--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
-  background-color: ffffff;
+  /* background-color: ffffff; */
+
+
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -27,6 +30,7 @@
 
 .App-link {
   color: #61dafb;
+
 }
 
 @keyframes App-logo-spin {
@@ -36,4 +40,45 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.MainContainer{
+  background-image: url('../public/cabania.jpg');
+  height: 100%;
+  max-width: 100%;
+  width: 100%;
+  margin: 0px;
+  background-repeat: no-repeat;
+  align-items: center;
+}
+
+.MainTititule{
+  color:azure;
+}
+
+.container{
+  background-color: grey;
+  margin: 0%;
+  max-width: 100%;
+  border:none;
+  border-style: solid;
+  border-bottom: 6px solid rgb(66, 65, 65);
+  align-items: center;
+}
+
+.MailForm{
+  margin: 20px,20px;
+}
+
+.WelcomeText{
+  Color:White;
+  opacity: 0.9;
+  padding-bottom: 50px;
+  margin-bottom: 70px;
+  letter-spacing: 0.67px;
+  background-repeat: no-repeat;
+  
+}
+.brgImg{
+  mask-repeat: no-repeat;
 }
