--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,8 @@ width: 60vh;
   letter-spacing: 0.67px;
   background-repeat: no-repeat;
  
-  margin: 25px;
+  margin: 5%;
+  margin-top: 10px;
 }
 
 .bkgImg{
