--- a/src/Assets/CSS/styles.css
+++ b/src/Assets/CSS/styles.css
@@ -1,18 +1,18 @@
 body{
     margin: 0;
-    padding: 0px 10px 10px 10px;
-   
+    padding: 0;
+
 }
 .grid_menu{
     padding: 5px;
-   
+
    }
 .navbar_menu{
     padding: 5px;
     margin: auto;
      background-color: rgba(0, 0, 0,0);
     width: 100%;
-   
+
    }
    .navbar{
        color: white !important;
@@ -27,5 +27,3 @@ body{
     .navbar-nav{
         margin-left: auto;
     }
-   
-   
