--- a/src/index.scss
+++ b/src/index.scss
@@ -14,22 +14,22 @@ img {
     text-align: center;
     /* background-color: ffffff; */
   }
-  
+
 html{
   scroll-behavior: smooth;
 }
-  
+
   .App-logo {
     height: 40vmin;
     pointer-events: none;
   }
-  
+
   @media (prefers-reduced-motion: no-preference) {
     .App-logo {
       animation: App-logo-spin infinite 20s linear;
     }
   }
-  
+
   .App-header {
     background-color: #282c34;
     min-height: 100vh;
@@ -40,12 +40,12 @@ html{
     font-size: calc(10px + 2vmin);
     color: white;
   }
-  
+
   .App-link {
     color: #61dafb;
-  
+
   }
-  
+
   @keyframes App-logo-spin {
     from {
       transform: rotate(0deg);
@@ -54,20 +54,18 @@ html{
       transform: rotate(360deg);
     }
   }
-  
+
   .MainContainer{
-    background-image: url('../public/cabania.jpg');
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    max-width: 100%;
+    left: 0px;
     width: 100%;
+    height: 768px;
+    background: transparent url('../public/cabania.jpg') 0% 0% no-repeat padding-box;
+    background-position: center top;
+    background-size: 100% auto;
     padding: 30px;
-    margin: 0px;
-    background-repeat: no-repeat;
-    padding-top: 0;
+    opacity: 1;
   }
+
   .part-container{
     padding: 60px 6;
     position: relative;
@@ -75,7 +73,7 @@ html{
   }
   .MainTititle{
     color:azure;
-   
+
   }
   .menu{
    padding: 10px;
@@ -95,14 +93,14 @@ html{
     Color:White;
     opacity: 0.9;
     font-size: calc(10px + 2vmin);
-    padding-top: 10px; 
+    padding-top: 10px;
     background-color: grey;
     width: 80%;
-    height: 100vh;
+    height: 70%;
     border-radius: 4%;
     letter-spacing: 0.67px;
     background-repeat: no-repeat;
-   
+
     margin: 25px;
   }
   .text-box{
@@ -131,14 +129,30 @@ html{
     left: 360px; top: 210px; z-index: 1;
   }
   .img-txt{
-    width: auto; 
+    width: auto;
     position: absolute;
-    max-height: 25vw; 
+    max-height: 25vw;
   }
+
+  #form-row {
+    margin-top: 80px;
+    background: #33333312;;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  label.form-label {
+    color:#6c757d !important;
+  }
+
+  .me-auto {
+    margin-right: 23px !important;
+}
 
   .slider-3{
     position: relative;
     margin: 40px;
+    margin-top: 200px;
     padding: 20px;
     width: 100vh;
     height: 100%;
@@ -148,15 +162,13 @@ html{
 .accordion{
   position: relative;
   display: block;
-  max-width: 60%;
   margin-left: 40px;
   z-index: 1;
 }
 .img-aco{
-  width: auto; 
-  position: absolute;
-  max-height: 25vw; 
-  left: 620px; top: 130px; z-index: 2;  
+  width: auto;
+  max-height: 25vw;
+  z-index: 2;
 }
 
 .centered-slider{
@@ -164,11 +176,9 @@ html{
   height: 200px;
 }
   .MailForm{
-    background: black;
     margin: 20px,20px;
     display: block;
-    width: 80vh;
-    opacity: 0.8;
+    width: 95%;
     border-radius: 3px;
     border:none;
     border-style: 1px solid;
@@ -188,25 +198,24 @@ html{
   z-index: 1;
 }
 .img-form{
-  width: auto; 
+  width: auto;
   position: absolute;
-  max-height: 25vw; 
-  left: 500px;  z-index: 2;  
+  max-height: 25vw;
+  left: 500px;  z-index: 2;
 }
-  
+
 
 
   .bkgImg{
     mask-repeat: no-repeat;
     width: 300px;
-    
+
   }
   .col_menu{
-   
+
     background-color: rgba(0, 0, 0,0.03) ;
   }
   .navbar_menu{
-    
+
     background-color: rgba(0, 0, 0,0.03) ;
   }
-  
