--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ img {
  .App {
     text-align: center;
     /* background-color: ffffff; */
+    scroll-behavior: smooth;
   }
 
 html{
@@ -70,6 +71,7 @@ html{
     padding: 60px 6;
     position: relative;
     max-height: 100%;
+    // margin :auto;
   }
   .MainTititle{
     color:azure;
@@ -106,6 +108,7 @@ html{
   .text-box{
     display: block;
     width: 100%;
+    top: 100px;
     padding: 80px hidden;
     margin: 60px 60px;
     position: relative;
@@ -151,10 +154,10 @@ html{
 
   .slider-3{
     position: relative;
-    margin: 40px;
+    margin: auto;
     margin-top: 200px;
     padding: 20px;
-    width: 100vh;
+    width: 150vh;
     height: 100%;
     background-color: #F2F4F1;
     margin-bottom: 50px;
