--- a/src/index.scss
+++ b/src/index.scss
@@ -58,20 +58,20 @@ html{
   .MainContainer{
     left: 0px;
     width: 100%;
-<<<<<<< HEAD
+
    
     margin: 0px;
     
     background-repeat: no-repeat;
     padding-top: 0;
-=======
+
     height: 768px;
     background: transparent url('../public/cabania.jpg') 0% 0% no-repeat padding-box;
     background-position: center top;
     background-size: 100% auto;
     padding: 30px;
     opacity: 1;
->>>>>>> 3e01a299e73c2f7b6b55c11d3d555e2c50bfd61d
+
   }
 
   .part-container{
@@ -90,34 +90,14 @@ html{
   }
   .container{
     opacity: 0.95;
-    background-color: rgba(0, 0, 0,0.9) ;
+    background-color: rgba(255, 251, 251, 0.418) ;
     margin: 0%;
     max-width: 100%;
     /*border-bottom: 6px solid rgb(66, 65, 65);*/
     align-items: center;
   }
 
-  .WelcomeText{
-   color: black;
-    font-size: calc(10px + 2vmin);
-<<<<<<< HEAD
-    padding-top: 10px; 
-    width: 80%;
-    height: 100vh;
-   letter-spacing: 0.67px;
   
-=======
-    padding-top: 10px;
-    background-color: grey;
-    width: 80%;
-    height: 70%;
-    border-radius: 4%;
-    letter-spacing: 0.67px;
-    background-repeat: no-repeat;
-
->>>>>>> 3e01a299e73c2f7b6b55c11d3d555e2c50bfd61d
-    margin: 25px;
-  }
   .text-box{
     display: block;
     width: 100%;
