--- a/src/index.scss
+++ b/src/index.scss
@@ -32,6 +32,9 @@ html{
     }
   }
 
+
+
+
   .App-header {
     background-color: #282c34;
     min-height: 100vh;
@@ -61,9 +64,9 @@ html{
     left: 0px;
     width: 100%;
 
-   
+
     margin: 0px;
-    
+
     background-repeat: no-repeat;
     padding-top: 0;
     scroll-behavior: smooth;
@@ -100,25 +103,20 @@ html{
     align-items: center;
   }
 
-  
+
   .text-box{
     display: block;
     width: 100%;
-    top: 100px;
     padding: 80px hidden;
-    margin: 60px 60px;
     position: relative;
     background-color: #FFFFFF00;
 
   }
   .text-paragraph{
-    margin-top: 50px;
-    display:blcok;
-    max-width: 80%;
-
+    display:block;
     position: relative;
     z-index: 2;
-    width: 60%;
+    width: 100%;
   }
   .text-pic{
     display: block;
@@ -148,15 +146,25 @@ html{
     margin-right: 23px !important;
 }
 
+.carousel-inner {
+  max-height: 500px;
+
+}
+
+.text-content-area {
+  padding: 35px;
+}
+
   .slider-3{
     position: relative;
     margin: auto;
-    margin-top: 200px;
+    margin-top: 30%;
     padding: 20px;
-    width: 150vh;
-    height: 100%;
+    max-width: 150vh;
+    width: 100%;
+    height: auto;
     background-color: #F2F4F1;
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
 .accordion{
   position: relative;
@@ -173,7 +181,7 @@ html{
 .centered-slider{
   display: block;
   padding: 50px;
- 
+
 }
 .centered-slider img{
  max-width: 70vh;
@@ -224,3 +232,30 @@ html{
 
     background-color: rgba(0, 0, 0,0.03) ;
   }
+
+
+@media only screen and (max-width: 600px) {
+
+  .welcome_text {
+      display:none;
+  }
+
+  .izquierda {
+      display:none;
+  }
+
+  .slider-3 {
+    margin-top: 40%;
+  }
+
+  img.img-aco {
+    width: 92% !important;
+margin-left: 8%;
+max-height: 100%;
+height: 100% !important;
+margin-top: 15px;
+}
+
+
+
+}
