--- a/src/index.scss
+++ b/src/index.scss
@@ -13,10 +13,12 @@ img {
  .App {
     text-align: center;
     /* background-color: ffffff; */
+    scroll-behavior: smooth;
   }
 
 html{
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
 
   .App-logo {
@@ -29,6 +31,9 @@ html{
       animation: App-logo-spin infinite 20s linear;
     }
   }
+
+
+
 
   .App-header {
     background-color: #282c34;
@@ -59,12 +64,12 @@ html{
     left: 0px;
     width: 100%;
 
-   
+
     margin: 0px;
-    
+
     background-repeat: no-repeat;
     padding-top: 0;
-
+    scroll-behavior: smooth;
     height: 768px;
     background: transparent url('../public/cabania.jpg') 0% 0% no-repeat padding-box;
     background-position: center top;
@@ -78,6 +83,7 @@ html{
     padding: 60px 6;
     position: relative;
     max-height: 100%;
+    // margin :auto;
   }
   .MainTititle{
     color:azure;
@@ -97,24 +103,19 @@ html{
     align-items: center;
   }
 
-  
   .text-box{
     display: block;
     width: 100%;
     padding: 80px hidden;
-    margin: 60px 60px;
     position: relative;
     background-color: #FFFFFF00;
 
   }
   .text-paragraph{
-    margin-top: 50px;
-    display:blcok;
-    max-width: 80%;
-
+    display:block;
     position: relative;
     z-index: 2;
-    width: 60%;
+    width: 100%;
   }
   .text-pic{
     display: block;
@@ -144,15 +145,25 @@ html{
     margin-right: 23px !important;
 }
 
+.carousel-inner {
+  max-height: 500px;
+
+}
+
+.text-content-area {
+  padding: 35px;
+}
+
   .slider-3{
     position: relative;
-    margin: 40px;
-    margin-top: 200px;
+    margin: auto;
+    margin-top: 30%;
     padding: 20px;
-    width: 100vh;
-    height: 100%;
+    max-width: 150vh;
+    width: 100%;
+    height: auto;
     background-color: #F2F4F1;
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
 .accordion{
   position: relative;
@@ -168,7 +179,13 @@ html{
 
 .centered-slider{
   display: block;
-  height: 200px;
+  padding: 50px;
+
+}
+.centered-slider img{
+ max-width: 70vh;
+ margin:auto;
+
 }
   .MailForm{
     margin: 20px,20px;
@@ -214,3 +231,30 @@ html{
 
     background-color: rgba(0, 0, 0,0.03) ;
   }
+
+
+@media only screen and (max-width: 600px) {
+
+  .welcome_text {
+      display:none;
+  }
+
+  .izquierda {
+      display:none;
+  }
+
+  .slider-3 {
+    margin-top: 40%;
+  }
+
+  img.img-aco {
+    width: 92% !important;
+margin-left: 8%;
+max-height: 100%;
+height: 100% !important;
+margin-top: 15px;
+}
+
+
+
+}
